@@ -2,7 +2,7 @@
 # Placeholder makefile so "debuild" can be gently persuaded to work
 #
 
-.PHONY: kano-keys-pressed kano-splash kano-launcher kano-logging kano kano-networking kano-python parson
+.PHONY: kano-keys-pressed kano-splash kano-launcher kano-logging kano kano-networking kano-python parson check test
 
 all: kano-keys-pressed kano-splash kano-launcher kano kano-networking kano-python parson
 
@@ -33,3 +33,8 @@ kano-python:
 parson:
 	cd libs/parson && make
 	cd libs/parson && make debug
+
+check:
+	pytest -ra
+
+test: check
