@@ -10,3 +10,5 @@ override_dh_strip:
 	dh_strip -plibkano-networking --dbg-package=libkano-networking-dbg
 	dh_strip -plibkano-python --dbg-package=libkano-python-dbg
 	dh_strip -plibparson --dbg-package=libparson-dbg
+
+override_dh_auto_test:
