@@ -1,0 +1,13 @@
+#
+# conftest.py
+#
+# Copyright (C) 2017 Kano Computing Ltd.
+# License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPL v2
+#
+# The pytest conftest file
+#
+# Import fixtures and setup the tests
+#
+
+
+from tests.fixtures.webapp import *
