@@ -1,0 +1,10 @@
+# __init__.py
+#
+# Copyright (C) 2017 Kano Computing Ltd.
+# License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPL v2
+#
+# Python package definition.
+
+
+__author__ = 'Kano Computing Ltd.'
+__email__ = 'dev@kano.me'
